[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/saw.png" type="Texture" id=1]
[ext_resource path="res://scripts/saw.gd" type="Script" id=2]
[ext_resource path="res://textures/light.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CircleShape2D" id=3]
radius = 9.26028

[node name="saw" type="Area2D"]
position = Vector2( 1, 1 )
collision_mask = 3
script = ExtResource( 2 )

[node name="saw" type="Sprite" parent="."]
modulate = Color( 0.192157, 0.192157, 0.192157, 1 )
material = SubResource( 1 )
position = Vector2( -1.011, -1.14 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="lightPerformance" type="Sprite" parent="."]
modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
material = SubResource( 2 )
position = Vector2( 1.135, -0.787 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.851, -0.878 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.05404, -0.92932 )
scale = Vector2( 1.64292, 1.62146 )

[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
